--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -21,6 +21,9 @@
   <br><br>
   <button type="button" id="start" style="width:150px;height:70px">画面共有する</button>
   <script src="index.js"></script>
+<h3>SD(720dpi×480dpi)30fpsの画面共有</h3>	
+	
+	
 </body>
 
 </html>
