--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.webrtc.ecl.ntt.com/skyway-4.4.1.js"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>SD(720dpi×480dpi)30fpsの画面共有</title>
+  <title>ID設定</title>
 </head>
 
 <body>
 	<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette" title="ConnectPalette">
 
-  <h1>SD(720dpi×480dpi)30fpsの画面共有</h1>
+  <h1>ID設定</h1>
   <p id="my-id"></p>
   <br>
   <button type="button" id="url" style="display:none">画面共有のURLをコピーする</button>
@@ -20,10 +20,8 @@
   <textarea id="set-id"></textarea>
   <br><br>
   <button type="button" id="start" style="width:150px;height:70px">画面共有する</button>
-  <script src="index.js"></script>
-<h3>SD(720dpi×480dpi)30fpsの画面共有</h3>	
-	
-	
+  <h3>SD(720dpi×480dpi)30fpsの画面共有</h3>	
+　<script src="index.js"></script>	
 </body>
 
 </html>
