--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -15,7 +15,7 @@
   <h1>ID設定</h1>
   <p id="my-id"></p>
   <br>
-  <button type="button" id="url" style="display:none">画面共有のURLをコピーする</button>
+  <!--<button type="button" id="url" style="display:none">画面共有のURLをコピーする</button> -->
   <h2 id="set-id-txt">IDを設定する:</h2>
   <textarea id="set-id"></textarea>
   <br><br>
