--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -6,21 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.webrtc.ecl.ntt.com/skyway-4.4.1.js"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ID設定</title>
+  <title></title>
 </head>
 
 <body>
-	<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette" title="ConnectPalette">
-
-  <h1>ID設定</h1>
+　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette" title="ConnectPalette">
   <p id="my-id"></p>
   <br>
   <!--<button type="button" id="url" style="display:none">画面共有のURLをコピーする</button> -->
-  <h2 id="set-id-txt">IDを設定する:</h2>
+  <h1 id="set-id-txt">IDを設定する:</h1>
   <textarea id="set-id"></textarea>
   <br><br>
   <button type="button" id="start" style="width:150px;height:70px">画面共有する</button>
-  <h3>SD(720dpi×480dpi)30fpsの画面共有</h3>	
+  <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3>	
 　<script src="index.js"></script>	
 </body>
 
