--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -19,7 +19,8 @@
   <textarea id="set-id"></textarea>
   <br><br>
   <button type="button" id="start" style="width:150px;height:70px">画面共有する</button>
-  <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3>	</center>
+  <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3>
+  </center>
 　<script src="index.js"></script>	
 </body>
 
