--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -14,8 +14,7 @@
 　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette" title="ConnectPalette">
   <p id="my-id"></p>
   <br>
-  <!--<button type="button" id="url" style="display:none">画面共有のURLをコピーする</button> -->
-  <h1 id="set-id-txt">IDを設定する:</h1>
+  <h1><id="set-id-txt">IDを設定する:</h1>
   <textarea id="set-id"></textarea>
   <br><br>
   <button type="button" id="start" style="width:150px;height:70px">画面共有する</button>
