--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -14,8 +14,8 @@
 　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette" title="ConnectPalette">
   <p id="my-id"></p>
   <br>
-  <h1><id="set-id-txt">IDを設定する:</h1>
-  <textarea id="set-id"></textarea>
+  <h1><id="set-id-txt">IDを設定する:
+  <textarea id="set-id"></textarea></h1>
   <br><br>
   <button type="button" id="start" style="width:150px;height:70px">画面共有する</button>
   <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3>
