--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -15,9 +15,9 @@
   <p id="my-id"></p>
   <br>
   <h1><id="set-id-txt">IDを設定する:<br>
-  <textarea id="set-id"></textarea>
+  <textarea id="set-id"></textarea></h1>
   <br>
-  <button type="button" id="start" style="width:150px;height:70px">画面共有する</button></h1>
+  <button type="button" id="start" style="width:150px;height:70px">画面共有する</button>
   <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3>
   </center>
 　<script src="index.js"></script>	
