--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -19,6 +19,8 @@
   <br>
   <button type="button" id="start" style="width:150px;height:70px">画面共有する</button>
   <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3>
+　<img src="https://appremote.github.io/ShareScreen/img/Help01.png" alt="ConnectPalette" title="ConnectPalette">
+　<img src="https://appremote.github.io/ShareScreen/img/Help02.png" alt="ConnectPalette" title="ConnectPalette">
   </center>
 　<script src="index.js"></script>	
 </body>
