--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -18,9 +18,9 @@
   <textarea id="set-id"　style="padding:11px 5px 9px 5px;font-size:100px;min-height:50px;"></textarea></h1>
   <br>
   <button type="button" id="start" style="width:150px;height:70px">画面共有する</button>
-  <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3>
-　<img src="https://appremote.github.io/ShareScreen/img/Help01.png" alt="Help" title="Help">
-　<img src="https://appremote.github.io/ShareScreen/img/Help02.png" alt="Help" title="Help">
+  <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3><br>
+　<img src="https://appremote.github.io/ShareScreen/img/Help01.png" alt="Help" title="Help"><br>
+　<img src="https://appremote.github.io/ShareScreen/img/Help02.png" alt="Help" title="Help"><br>
   </center>
 　<script src="index.js"></script>	
 </body>
