--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <center>
-　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette" title="ConnectPalette">
+　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette"　 width="500" title="ConnectPalette">
   <p id="my-id"></p><br>
   <h1><id="set-id-txt">IDを設定する:</h1><br>
   <textarea id="set-id"　style="padding:11px 5px 9px 5px;font-size:100px;min-height:50px;"></textarea><br>
