--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -13,7 +13,7 @@
   <center>
 　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette"　 width="500" title="ConnectPalette">
   <p id="my-id"></p><br>
-  <h1><id="set-id-txt">IDを設定する:</h1><br>
+  <h1><id="set-id-txt">IDを設定する:<br></h1>
   <textarea id="set-id"　style="padding:11px 5px 9px 5px;font-size:100px;min-height:50px;"></textarea><br>
   <button type="button" id="start" style="width:150px;height:70px">画面共有する</button><br>
   <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3><br>
