--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -11,13 +11,13 @@
 
 <body>
   <center>
-　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette"　 width="500" title="ConnectPalette">
+　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette"　width="600" title="ConnectPalette">
   <p id="my-id"></p><br>
   <h1><id="set-id-txt">IDを設定する:<br></h1>
   <textarea id="set-id"　style="padding:11px 5px 9px 5px;font-size:100px;min-height:50px;"></textarea><br>
   <button type="button" id="start" style="width:150px;height:70px">画面共有する</button><br>
   <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3><br>
-　<img src="https://appremote.github.io/ShareScreen/img/Help03.png" alt="Help" title="Help"><br>
+　<img src="https://appremote.github.io/ShareScreen/img/Help03.png" alt="Help" width="900"　title="Help"><br>
   </center>
 　<script src="index.js"></script>	
 </body>
