--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -14,8 +14,8 @@
 　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette" title="ConnectPalette">
   <p id="my-id"></p><br>
   <h1><id="set-id-txt">①ID設定:
-  <textarea id="set-id"　style="padding:11px 5px 9px 5px;font-size:100px;min-height:50px;"></textarea>
-  例）01</h1><br>
+  <textarea id="set-id"　style="padding:11px 5px 9px 5px;font-size:100px;min-height:50px;"></textarea></h1>
+  <h2>例）01</h2><br>
   <button type="button" id="start" style="width:150px;height:70px">②画面共有する</button><br>
   <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3><br>
 　<img src="https://appremote.github.io/ShareScreen/img/Help03.png" alt="Help" width="800"　title="Help"><br>
