--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -18,6 +18,7 @@
   <button type="button" id="start" style="width:200px;height:80px;font-size:20px">②画面共有する</button><br>
   <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3><br>
 　<img src="https://appremote.github.io/ShareScreen/img/Help03.png" alt="Help" width="800"　title="Help"><br>
+  <a href="https://appremote.github.io/ShareScreen/img/Help03.png"><img src="https://appremote.github.io/ShareScreen/img/Help03.png" alt="ヘルプ"></a>
   </center>
 　<script src="index.js"></script>	
 </body>
