--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -17,8 +17,7 @@
   <textarea id="set-id"　style="font-size:100px"></textarea></h1><br>
   <button type="button" id="start" style="width:200px;height:80px;font-size:20px">②画面共有する</button><br>
   <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3><br>
-　<img src="https://appremote.github.io/ShareScreen/img/Help03.png" alt="Help" width="800"　title="Help"><br>
-  <a href="https://appremote.github.io/ShareScreen/img/Help03.png"><img src="https://appremote.github.io/ShareScreen/img/Help03.png" alt="ヘルプ"></a>
+  <a href="https://appremote.github.io/ShareScreen/img/Help03.png"><img src="https://appremote.github.io/ShareScreen/img/Help03.png" alt="ヘルプ"></a><br>
   </center>
 　<script src="index.js"></script>	
 </body>
