--- a/SD30fps/index.html
+++ b/SD30fps/index.html
@@ -14,7 +14,7 @@
 　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" alt="ConnectPalette" title="ConnectPalette">
   <p id="my-id"></p>
   <h1><id="set-id-txt">①ID設定:
-  <textarea id="set-id"　style="font-size:100px"></textarea></h1>
+  <textarea id="set-id"　 rows="1"　class="big"></textarea></h1>
   <button type="button" id="start" style="width:200px;height:80px;font-size:20px">②画面共有する</button><br>
   <h3>※SD(720dpi×480dpi)30fpsの画面共有</h3>
   <a href="https://appremote.github.io/ShareScreen/img/Help03.png"><img src="https://appremote.github.io/ShareScreen/img/Help03.png" alt="ヘルプ"></a>
