--- a/test/index.html
+++ b/test/index.html
@@ -1,3 +1,20 @@
+<script>
+
+var pw;
+
+pw = prompt("パスワードを入れて下さい。","");
+
+if (pw == "abcde"){
+  location.href = "kakure.html";
+}else{
+  alert("パスワードが違います！");
+}
+
+</script>
+
+
+
+
 <!DOCTYPE html>
 <html lang="jp">
 
