--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@ var pw;
 pw = prompt("パスワードを入れて下さい。","");
 
 if (pw == "abcde"){
-  location.href = "https://connect-palette.jimdosite.com/%E8%AC%9B%E7%BF%92%E4%BC%9A%E3%83%A2%E3%83%BC%E3%83%89/";
+  location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
 }else{
   alert("パスワードが違います！");
 }
