--- a/test/index.html
+++ b/test/index.html
@@ -4,10 +4,11 @@ var pw;
 
 pw = prompt("パスワードを入れて下さい。","");
 
-if (pw == "abcde"){
-  location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
+if (pw != "aaa"){
+    alert("パスワードが違います！");
 }else{
-  alert("パスワードが違います！");
+    location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
+
 }
 
 </script>
