--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,12 @@ if (pw != "aaa"){
 }else{
     location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
 
+if (pw != "bbb"){
+    alert("パスワードが違います！");
+}else{
+    location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
+
+
 }
 
 </script>
