--- a/test/index.html
+++ b/test/index.html
@@ -4,15 +4,10 @@ var pw;
 
 pw = prompt("パスワードを入れて下さい。","");
 
-if (pw != "aaa"){
-    alert("パスワードが違います！");
-}else{
+if (pw == "aaa")|(pw == "ccc"){
     location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
-
-if (pw != "bbb"){
-    alert("パスワードが違います！");
 }else{
-    location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
+    alert("パスワードが違います！");
 
 
 }
