--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@ var pw;
 
 pw = prompt("パスワードを入れて下さい。","");
 
-if (pw == "aaa")|(pw == "ccc"){
+if (pw == "aaa" |pw == "ddd"){
     location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
 }else{
     alert("パスワードが違います！");
