--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <script src="java.js"></script>	
   <center>
 　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" width="400" alt="ConnectPalette" title="ConnectPalette">
   <p id="my-id"></p>
