--- a/test/index.html
+++ b/test/index.html
@@ -1,3 +1,21 @@
+<script>
+
+var pw;
+
+pw = prompt("パスワードを入れて下さい。","");
+
+if (pw == "aaa" |pw == "ddd"){
+    location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
+}else{
+    alert("パスワードが違います！");
+    location.href = "https://www.yahoo.co.jp/";
+
+}
+
+</script>
+
+
+
 <!DOCTYPE html>
 <html lang="jp">
 
@@ -10,7 +28,6 @@
 </head>
 
 <body>
-  <script src="java.js"></script>	
   <center>
 　<img src="https://appremote.github.io/ShareScreen/img/rogo.png" width="400" alt="ConnectPalette" title="ConnectPalette">
   <p id="my-id"></p>
