--- a/test/index.html
+++ b/test/index.html
@@ -1,18 +1,13 @@
-<script>
-
-var pw;
-
-pw = prompt("パスワードを入れて下さい。","");
-
-if (pw == "aaa" |pw == "ddd"){
-    location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
-}else{
-    alert("パスワードが違います！");
-    location.href = "https://www.yahoo.co.jp/";
-
+<script type="text/javascript"><!--
+function myEnter(){
+   myPassWord=prompt("Tatsuya家のパスワードを入力してください","");
+   if ( myPassWord == "pass1" ){
+      location.href = "secret.htm";
+   }else{
+      alert( "パスワードが違います!" );
+   }
 }
-
-</script>
+// --></script>
 
 
 
