--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@ if (pw == "aaa" |pw == "ddd"){
     location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
 }else{
     alert("パスワードが違います！");
-    location.href = "https://www.yahoo.co.jp/";
+    location.href = "https://connect-palette.jimdosite.com/%E7%99%BB%E9%8C%B2/";
 
 }
 
