--- a/test/index.html
+++ b/test/index.html
@@ -1,17 +1,13 @@
+<!== 簡易パスワード ==>
 <script>
-
 var pw;
-
-pw = prompt("パスワードを入れて下さい。","");
-
+pw = prompt("ライセンスキーを入れて下さい。","");
 if (pw == "aaa" |pw == "ddd"){
     location.href = "https://appremote.github.io/ShareScreen/720p30fps/";
 }else{
     alert("パスワードが違います！");
     location.href = "https://connect-palette.jimdosite.com/%E7%99%BB%E9%8C%B2/";
-
 }
-
 </script>
 
 
