--- a/Multiple/9/index.html
+++ b/Multiple/9/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.webrtc.ecl.ntt.com/skyway-4.4.1.js"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>(ŽóM)9‰æ–Ê‹¤—L</title>
+  <title>(受信)画面共有</title>
 </head>
 <body>
   <div class="oomatome">
