--- a/Multiple/9/9.html
+++ b/Multiple/9/9.html
@@ -1,11 +1,11 @@
-<!== ŠÈˆÕƒpƒXƒ[ƒh ==>
+<!== ç°¡æ˜“ãƒ‘ã‚¹ãƒ¯ãƒ¼ãƒ‰ ==>
 <script>
 var pw;
-pw = prompt("ƒ‰ƒCƒZƒ“ƒXƒL[‚ğ“ü‚ê‚Ä‰º‚³‚¢B","");
+pw = prompt("ãƒ©ã‚¤ã‚»ãƒ³ã‚¹ã‚­ãƒ¼ã‚’å…¥ã‚Œã¦ä¸‹ã•ã„ã€‚","");
 if (pw == "aaa" |pw == "ddd"){
-   // location.href = "https://appremote.github.io/ShareScreen/Multiple/9/";@
+    location.href = "https://appremote.github.io/ShareScreen/Multiple/9/";ã€€
 }else{
-    alert("ƒpƒXƒ[ƒh‚ªˆá‚¢‚Ü‚·I");
+    alert("ãƒ‘ã‚¹ãƒ¯ãƒ¼ãƒ‰ãŒé•ã„ã¾ã™ï¼");
     location.href = "https://connect-palette.jimdosite.com/%E7%99%BB%E9%8C%B2/";
 }
 </script>
