--- a/Multiple/9/index.html
+++ b/Multiple/9/index.html
@@ -5,7 +5,7 @@ pw = prompt("ライセンスキーを入れて下さい。","");
 if (pw == "aaa" |pw == "ddd"){
     location.href = "https://appremote.github.io/ShareScreen/Multiple/9/";　
 }else{
-    alert("パスワードが違います！");
+    alert("ライセンスキーが違います！");
     location.href = "https://connect-palette.jimdosite.com/%E7%99%BB%E9%8C%B2/";
 }
 </script>
