--- a/Multiple/9/9.html
+++ b/Multiple/9/9.html
@@ -3,11 +3,13 @@
 var pw;
 pw = prompt("ライセンスキーを入れて下さい。","");
 if (pw == "aaa" |pw == "ddd"){
-    location.href = "https://appremote.github.io/ShareScreen/Multiple/9/";　
+    location.href = "https://appremote.github.io/ShareScreen/Multiple/9/9.html";　
 }else{
     alert("パスワードが違います！");
     location.href = "https://connect-palette.jimdosite.com/%E7%99%BB%E9%8C%B2/";
 }
 </script>
 
+<body>
 0000000000000000
+</body>
