--- a/Multiple/9/9.html
+++ b/Multiple/9/9.html
@@ -2,7 +2,7 @@
 <script>
 var pw;
 pw = prompt("ライセンスキーを入れて下さい。","");
-if (pw == "aaa" |pw == "ddd"){
+if (pw == "pwfree" |pw == "aaa"){
     location.href = "https://appremote.github.io/ShareScreen/Multiple/9/";　
 }else{
     alert("パスワードが違います！");
