--- a/look/viewScreen/index.html
+++ b/look/viewScreen/index.html
@@ -11,7 +11,7 @@
     <div class="oomatome">
       <div class="sample1">
         <div class="cener">
-          <input type="text" id="text01" value="01" />
+          <input type="text" id="text01" value="" />
           <input type="button" id="button01" value="更新"/>
         </div>
         <div class="cener">
@@ -28,3 +28,4 @@
     <link rel="stylesheet" href="index.css" />
   </body>
 </html>
+
